<?xml version="1.0"?>
<package format="2">
  <name>my_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies (replace with your actual dependencies) -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
